--- a/PullToRefresh/app/src/main/res/layout/a_main.xml
+++ b/PullToRefresh/app/src/main/res/layout/a_main.xml
@@ -12,7 +12,7 @@
         android:text="PullDownListView"
         android:textColor="#fff" />
 
-    <com.mayo.pulltorefresh.listview.PullDownListView
+    <com.mayo.pulltorefresh.listview.RefreshLoadListView
         android:id="@+id/pullDownListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,6 +48,6 @@
 
 
         </RelativeLayout>
-    </com.mayo.pulltorefresh.listview.PullDownListView>
+    </com.mayo.pulltorefresh.listview.RefreshLoadListView>
 
 </LinearLayout>
